--- a/aqualife/assets/css/styles.css
+++ b/aqualife/assets/css/styles.css
@@ -85,15 +85,24 @@ a:hover {
     background-position: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start; /* Alinha à esquerda */
     justify-content: center;
     gap: 30px;
     color: var(--color-light);
-    text-align: center;
+    text-align: left; /* Alinha texto à esquerda */
+    padding-left: 50px; /* Adiciona padding à esquerda */
 }
 
 .hero h1 {
-    font-size: 3vmin;
+    font-size: 5.5vmin; /* Tamanho da fonte */
+   
+    line-height: 1.2; /* Espaçamento entre linhas */
+   
+}
+
+.hero h3 {
+    line-height: 0.2; /* Espaçamento */
+    font-size:2.1vmin; /* tamanho texto */
 }
 
 .hero p {
@@ -110,4 +119,74 @@ a:hover {
 
 .btn:hover {
     background-color: transparent;
+}
+
+/******************** sessao2 *******************/
+.sessao2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    background-color: var(--color-light);
+    position: relative;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+
+.sessao2-content, .sessao2-image {
+    flex: 1;
+    padding: 20px;
+}
+
+.sessao2-content {
+    max-width: 50%;
+}
+
+.sessao2-content h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: var (--color-blue);
+    line-height: 1.2;
+}
+
+.sessao2-content p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: var(--color-blue);
+    line-height: 1.5;
+}
+
+#faça-parte {
+    background-color: var(--color-blue);
+    color: var(--color-light);
+}
+
+.sessao2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 8.5%;
+    width: 30%;
+    height: 100%;
+    background-image: url('../images/Logo vetor.png');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.10;
+    z-index: 0;
+}
+
+.sessao2-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sessao2-image img {
+    max-width: 100%;
+    border-radius: var(--border-radius);
 }
